--- a/Mainpage.css
+++ b/Mainpage.css
@@ -1,6 +1,11 @@
 body { 
     color: rgb(10,255,255);
 }
+
+a {
+    text-decoration: none;
+}
+
 /* SCREEN 250px+ */
 @media (min-width:250px) {
     body {
@@ -344,7 +349,7 @@ body {
         margin: auto;
         font-family: 'Creepster', cursive;
     }
-    
+    /*
     .home-button {
         width: 150px;
         height: 50px;
@@ -368,7 +373,7 @@ body {
         text-align: center;
         padding-top: 20px;
     }
-
+*/
     h1 {
         text-align: center;
         padding-top: 50px;
@@ -439,7 +444,7 @@ body {
         margin: auto;
         font-family: 'Creepster', cursive;
     }
-    
+    /*
     .home-button {
         width: 200px;
         height: 50px;
@@ -463,7 +468,7 @@ body {
         text-align: center;
         padding-top: 20px;
     }
-
+*/
     h1 {
         text-align: center;
         padding-top: 50px;
@@ -635,7 +640,8 @@ body {
         height: 50px;
         background-color: red;
         text-align: center;
-        padding-top: 20px;
+        padding-top: 15px;
+        font-size: 25px;
     }
     
     .osrs-button {
@@ -643,7 +649,8 @@ body {
         height: 50px;
         background-color: red;
         text-align: center;
-        padding-top: 20px;
+        padding-top: 15px;
+        font-size: 25px;
     }
     
     .runescape3-button {
@@ -651,7 +658,8 @@ body {
         height: 50px;
         background-color: red;
         text-align: center;
-        padding-top: 20px;
+        padding-top: 15px;
+        font-size: 25px;
     }
 
     h1 {
