--- a/osrs-page.css
+++ b/osrs-page.css
@@ -6,7 +6,13 @@ body {
 @media (min-width:480px)  {  }
 @media (min-width:600px)  {  }
 @media (min-width:801px)  {  }
-@media (min-width:1025px) {  }
+
+
+
+@media (min-width:1025px) { 
+    
+    
+
 @media (min-width:1281px) { 
     body {
         background: url(osrs-background.jpg) no-repeat center center fixed;
@@ -16,31 +22,13 @@ body {
         background-size: cover;
     }
 
-    .leftbanner2 img{
-        position: absolute;
-        top: 100px;
-        left: 0px;
-        width: 150px;
-        height: 1000px;
-        display: block;
-    }
-    
-    .rightbanner2 img{
-        position: absolute;
-        right: 0px;
-        top: 100px;
-        width: 150px;
-        height: 1000px;
-        display: block;
-    }
-
     form {
         background-color: rgba(0,10,255,0.4);
         width: 80%;
         position: relative;
         margin: auto;
         border-style: none;
-        top: 25px;
+        top: -43px;
         font-size: 25px;
         font-family: fantasy;
     }
@@ -81,7 +69,8 @@ body {
         height: 50px;
         background-color: red;
         text-align: center;
-        padding-top: 20px;
+        padding-top: 15px;
+        font-size: 25px;
     }
     
     .osrs-button {
@@ -89,7 +78,8 @@ body {
         height: 50px;
         background-color: red;
         text-align: center;
-        padding-top: 20px;
+        padding-top: 15px;
+        font-size: 25px;
     }
     
     .runescape3-button {
@@ -97,7 +87,8 @@ body {
         height: 50px;
         background-color: red;
         text-align: center;
-        padding-top: 20px;
+        padding-top: 15px;
+        font-size: 25px;
     }
 
     h1 {
