--- a/osrs-page.css
+++ b/osrs-page.css
@@ -9,9 +9,9 @@ body {
 
 
 
-@media (min-width:1025px) { 
+@media (min-width:1025px) {  } 
     
-    
+
 
 @media (min-width:1281px) { 
     body {
